feat: implementa estrategia de caché y mejora documentación
- Implementa caché en memoria usando AtomicReference con refresco diario a las 3 AM
- Agrega MovieCacheLoader para manejo de caché y refresco automático
- Mejora la documentación con SOLUTION.md detallando decisiones técnicas
- Actualiza README.md con información precisa de la implementación
- Implementa pruebas unitarias para DirectorService y DirectorController
- Configura ambiente de pruebas con application-test.yml
- Agrega manejo de errores global con GlobalExceptionHandler
- Implementa formato de respuesta estandarizado para errores
- Configura Actuator para monitoreo básico de la aplicación
- Agrega documentación Swagger/OpenAPI para el endpoint principal

Este commit completa la implementación base del servicio, agregando
caché para optimizar rendimiento y mejorando la documentación y
pruebas del proyecto.